--- a/analyses/analyses.Rmd
+++ b/analyses/analyses.Rmd
@@ -28,6 +28,8 @@ Note that I found what appears to be an error in Jake's code that I don't see do
 knitr::opts_chunk$set(message = FALSE, 
                       warning = FALSE)
 
+options(scipen=999)
+
 ```
 
 # Dependencies 
@@ -213,7 +215,7 @@ cohens_d_s_esci <- function(data, hedges_correction = TRUE){
   fit <- esci::CI_smd_ind_contrast(means = summaries$mean,
                                    sds = summaries$sd,
                                    ns = summaries$n,
-                                   contrast = c(+.5, -.5),
+                                   contrast = c(+1, -1),
                                    conf_level = 0.95,
                                    assume_equal_variance = FALSE,
                                    correct_bias = hedges_correction)
@@ -1079,12 +1081,12 @@ p_sim_4_all <- ggplot(results_sim_4, aes(paste(type, implementation), estimate, 
 
 p_sim_4_all
 
-# ggsave(filename = "p_sim_4_all.pdf",
-#        plot = p_sim_4_all,
-#        path = "../plots/",
-#        device = "pdf",
-#        width = 6,
-#        height = 6)
+ggsave(filename = "p_sim_4_all.pdf",
+       plot = p_sim_4_all,
+       path = "../plots/",
+       device = "pdf",
+       width = 6,
+       height = 6)
 
 ```
 
