--- a/analyses/versions_of_cohens_d.Rmd
+++ b/analyses/versions_of_cohens_d.Rmd
@@ -105,6 +105,37 @@ cohens_d_s_metafor <- function(data){
   return(res)
 }
 
+cohens_d_av_metafor <- function(data){
+  # nb always applies hedges correction
+  require(dplyr)
+  require(tibble)
+  require(metafor)
+  
+  summaries <- data |>
+    group_by(timepoint) |>
+    summarize(mean = mean(score),
+              sd = sd(score),
+              n = n()) |>
+    pivot_wider(names_from = "timepoint",
+                values_from = c("mean", "sd", "n"))
+  
+  fit <- escalc(measure = "SMDH", 
+                m1i = mean_stimulus2, 
+                sd1i = sd_stimulus2, 
+                n1i = n_stimulus2,
+                m2i = mean_stimulus1, 
+                sd2i = sd_stimulus1, 
+                n2i = n_stimulus1, 
+                data = summaries, 
+                append = FALSE)
+  
+  res <- 
+    tibble(estimate = fit$yi,
+           ci_lower = fit$yi - sqrt(fit$vi)*1.96,
+           ci_upper = fit$yi + sqrt(fit$vi)*1.96)
+  return(res)
+}
+
 
 cohens_d_s_esc <- function(data, hedges_correction = TRUE){
   require(dplyr)
@@ -313,10 +344,10 @@ cohens_d_s_mbess <- function(data, hedges_correction = TRUE){
                   Group.2 = data |> filter(timepoint == "stimulus1") |> pull(score),
                   Unbiased = hedges_correction)
   
-  t <- t.test(score ~ timepoint, data = data)$statistic
+  t <- stats::t.test(score ~ timepoint, data = data)$statistic
   
-  cis <- ci.smd(ncp = t,
-                #smd = d, 
+  cis <- ci.smd(#ncp = t,
+                smd = d, 
                 n.1 = data |> filter(timepoint == "stimulus2") |> pull(score) |> length(), 
                 n.2 = data |> filter(timepoint == "stimulus1") |> pull(score) |> length())
   
@@ -329,7 +360,7 @@ cohens_d_s_mbess <- function(data, hedges_correction = TRUE){
 }
 
 
-cohens_d_s_lsr <- function(data){
+cohens_d_s_lsr <- function(data, hedges_correction = TRUE){
   require(dplyr)
   require(tibble)
   require(lsr)
@@ -338,8 +369,11 @@ cohens_d_s_lsr <- function(data){
   mean_stimulus1 <- data |> dplyr::filter(timepoint == "stimulus1") |> summarize(mean = mean(score))
   mean_stimulus2 <- data |> dplyr::filter(timepoint == "stimulus2") |> summarize(mean = mean(score))
   
+  method <- ifelse(hedges_correction, "corrected", "pooled")
+  
   d <- lsr::cohensD(score ~ timepoint,
-                    data = data) 
+                    data = data, 
+                    method = method) 
   
   res <- 
     tibble(estimate = as.numeric(ifelse(mean_stimulus1 < mean_stimulus2, d, d * -1)),
@@ -348,47 +382,46 @@ cohens_d_s_lsr <- function(data){
   
   return(res)
 }
-
 
 cohens_d_dep_lsr <- function(data){
   require(dplyr)
   require(tibble)
   require(lsr)
-  
+
   # note that lsr::cohenD returns the absolute value of cohen's d, ie always positive values. fix this here to bring it in line with other packages' functions.
   mean_stimulus1 <- data |> dplyr::filter(timepoint == "stimulus1") |> summarize(mean = mean(score))
   mean_stimulus2 <- data |> dplyr::filter(timepoint == "stimulus2") |> summarize(mean = mean(score))
-  
+
   d <- lsr::cohensD(data |> dplyr::filter(timepoint == "stimulus1") |> pull(score),
                     data |> dplyr::filter(timepoint == "stimulus2") |> pull(score),
-                    method = "paired") 
-  
-  res <- 
+                    method = "paired")
+
+  res <-
     tibble(estimate = as.numeric(ifelse(mean_stimulus1 < mean_stimulus2, d, d * -1)),
            ci_lower = NA,
-           ci_upper = NA) 
-  
+           ci_upper = NA)
+
   return(res)
 }
-
 
 # assumes that 'data' contains columns named score (numeric) and timepoint (factor with two levels, stimulus1 and stimulus2, where positive cohen's d means higher scores at stimulus2)
 # assumes a two sided Student's t test with alpha = .05
 # by default, assumes correlation between timepoints is 0. larger values will narrow the CIs but leave the estimate unchanged. so, default result is the worst case stimulus1cision.
 d_t_dependent <- function(data, hedges_correction = TRUE, r = 0) { # assumes a correlation of 0 for simplicity
   require(dplyr)
-  
-  fit <- t.test(data$score[data$timepoint == "stimulus2"],
-                data$score[data$timepoint == "stimulus1"], 
+  require(stats)
+
+  fit <- stats::t.test(data$score[data$timepoint == "stimulus2"],
+                data$score[data$timepoint == "stimulus1"],
                 paired = TRUE)
-  
-  res <- 
+
+  res <-
     data.frame(t_stat = fit$statistic["t"],
                df = fit$parameter["df"],
                r = r) |>
     mutate(n = df + 1, # for dependent t test, n = df + 1
            dt_estimate = t_stat / sqrt(n), # for dependent t test, d_t = t / sqrt(n)
-           dt_estimate = ifelse(hedges_correction, 
+           dt_estimate = ifelse(hedges_correction,
                                 dt_estimate * (1 - (3 / (4 * n - 9))),
                                 dt_estimate),
            dt_se = sqrt((2 * (1 - r)) / n + (dt_estimate ^ 2) / (2 * n)), # default assumes a correlation of 0
@@ -396,7 +429,7 @@ d_t_dependent <- function(data, hedges_correction = TRUE, r = 0) { # assumes a c
            ci_upper = dt_estimate + (1.96 * dt_se),
            hedges_correction = hedges_correction) |>
     dplyr::select(hedges_correction, estimate = dt_estimate, ci_lower, ci_upper)
-  
+
   return(res)
 }
 
@@ -406,10 +439,11 @@ d_t_dependent <- function(data, hedges_correction = TRUE, r = 0) { # assumes a c
 # assumes that 'data' contains columns named score (numeric) and timepoint (factor with two levels)
 d_t_independent <- function(data, hedges_correction = TRUE){
   require(dplyr)
+  require(stats)
   
-  fit <- t.test(score ~ timepoint, 
+  fit <- stats::t.test(score ~ timepoint, 
                 data = data,
-                paired = FALSE, 
+                #paired = FALSE, # default is FALSE
                 var.equal = TRUE)
   
   res <- 
@@ -503,6 +537,12 @@ multiple_cohens_ds_for_dependent_data <- function(data, hedges_correction = TRUE
                hedges_correction = TRUE) |> # nb always applies hedges correction
         dplyr::select(implementation, type, hedges_correction, estimate, ci_lower, ci_upper),
       
+      cohens_d_av_metafor(data = data) |> 
+        mutate(type = "d_av",
+               implementation = "{metafor}",
+               hedges_correction = TRUE) |> # nb always applies hedges correction
+        dplyr::select(implementation, type, hedges_correction, estimate, ci_lower, ci_upper),
+      
       cohens_d_z_rstatix(data = data, hedges_correction = hedges_correction) |> 
         mutate(type = "d_z",
                implementation = "{rstatix}",
@@ -516,19 +556,19 @@ multiple_cohens_ds_for_dependent_data <- function(data, hedges_correction = TRUE
         dplyr::select(implementation, type, hedges_correction, estimate, ci_lower, ci_upper),
       
       cohens_d_z_esc(data = data, hedges_correction = hedges_correction) |> 
-        mutate(type = "d_??? (dep)",
+        mutate(type = "d_z",
                implementation = "{esc}",
                hedges_correction = hedges_correction) |>
         dplyr::select(implementation, type, hedges_correction, estimate, ci_lower, ci_upper),
       
       cohens_d_s_esci(data = data, hedges_correction = hedges_correction) |> 
-        mutate(type = "d_??? (indep)",
+        mutate(type = "d_s (indep)",
                implementation = "{esci}",
                hedges_correction = hedges_correction) |>
         dplyr::select(implementation, type, hedges_correction, estimate, ci_lower, ci_upper),
       
       cohens_d_dep_effsize(data = data, hedges_correction = hedges_correction) |> 
-        mutate(type = "d_??? (dep)",
+        mutate(type = "d_rm (dep)",
                implementation = "{effsize}",
                hedges_correction = hedges_correction) |>
         dplyr::select(implementation, type, hedges_correction, estimate, ci_lower, ci_upper),
@@ -536,7 +576,7 @@ multiple_cohens_ds_for_dependent_data <- function(data, hedges_correction = TRUE
       cohens_d_s_lsr(data = data) |> 
         mutate(type = "d_s",
                implementation = "{lsr}",
-               hedges_correction = FALSE) |> # lsr doesn't have an option for hedges corrections
+               hedges_correction = hedges_correction) |> 
         dplyr::select(implementation, type, hedges_correction, estimate, ci_lower, ci_upper),
       
       cohens_d_dep_lsr(data = data) |> 
@@ -546,12 +586,12 @@ multiple_cohens_ds_for_dependent_data <- function(data, hedges_correction = TRUE
         dplyr::select(implementation, type, hedges_correction, estimate, ci_lower, ci_upper),
       
       # this provides nearly identical results to d_s under most conditions
-      # effectsize::cohens_d(score ~ timepoint, data = data, pooled_sd = FALSE, adjust = hedges_correction) |>
-      #   as_tibble() |>
-      #   mutate(type = "d_s_nonpooled",
-      #          implementation = "{effectsize}",
-      #          hedges_correction = hedges_correction) |>
-      #   dplyr::select(implementation, type, hedges_correction, estimate = Hedges_g, ci_lower = CI_low, ci_upper = CI_high),
+      effectsize::cohens_d(score ~ timepoint, data = data, pooled_sd = FALSE, adjust = hedges_correction) |>
+        as_tibble() |>
+        mutate(type = "d_s_nonpooled",
+               implementation = "{effectsize}",
+               hedges_correction = hedges_correction) |>
+        dplyr::select(implementation, type, hedges_correction, estimate = Hedges_g, ci_lower = CI_low, ci_upper = CI_high),
       
       effectsize::repeated_measures_d(score ~ timepoint | id, data = data, method = "d", adjust = hedges_correction) |> 
         as_tibble() |> 
